[package]
name = "ellipticbench"
version = "0.1.0"
edition = "2024"

[dependencies]
p256 = "0.13.0"
k256 = "0.13"
# curve25519-dalek = {version = "4.1.1", features = ["rand_core"]}
# default-features=false: to remove precomputed tables
curve25519-dalek = {version = "4.1.1", features = ["rand_core"], default-features = false}  
rand = "0.8.5"
p521 = "0.13"
p384 = "0.13"
elgamal_p256 = { path = "deps/elgamal_p256" }
num = "0.4.0"


